[gd_scene load_steps=4 format=3 uid="uid://fs3oei8uyhtr"]

[ext_resource type="Script" uid="uid://bdt8y7di0yt21" path="res://Scripts/UI/CharacterCreator.gd" id="1_ylvlj"]
[ext_resource type="PackedScene" uid="uid://cfwyp1kljh03y" path="res://Scenes/Player/character_controller/player.tscn" id="2_65nj0"]
[ext_resource type="Script" uid="uid://ctvjn0dcyxc1s" path="res://Scenes/UI/CharacterCreatorCameraControler.gd" id="2_s1hm4"]

[node name="CharacterCreation" type="Node3D" node_paths=PackedStringArray("btn_gender_male", "btn_gender_female", "btn_hair_next", "btn_hair_prev", "btn_start", "hair_colors_container", "eye_colors_container", "skin_colors_container", "camera_controller")]
script = ExtResource("1_ylvlj")
btn_gender_male = NodePath("CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer2/BtnGenderMale")
btn_gender_female = NodePath("CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer2/BtnGenderFemale")
btn_hair_next = NodePath("CanvasLayer/Control/Panel/VBoxContainer/HairTypeContainer/BtnHairNext")
btn_hair_prev = NodePath("CanvasLayer/Control/Panel/VBoxContainer/HairTypeContainer/BtnHairPrev")
btn_start = NodePath("CanvasLayer/Control/Panel/VBoxContainer/BtnStart")
hair_colors_container = NodePath("CanvasLayer/Control/Panel/VBoxContainer/HairColorContainer")
eye_colors_container = NodePath("CanvasLayer/Control/Panel/VBoxContainer/EyeColorContainer")
skin_colors_container = NodePath("CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer")
camera_controller = NodePath("Camera3D")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.9987856, 0.007764127, -0.04865248, 1.1956731e-09, 0.9875048, 0.15758938, 0.049268097, -0.157398, 0.98630553, -0.19887584, 1.5478082, 0.7465837)
fov = 38.5
script = ExtResource("2_s1hm4")
female_position = Vector3(-0.83, 1.286, 2.655)
male_position = Vector3(-0.845, 1.336, 2.775)
female_face_position = Vector3(-0.19887584, 1.5478082, 0.7465837)
male_face_position = Vector3(-0.19887584, 1.6548038, 0.7465837)
transition_time = 1.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.7490483, 0.19543615, -0.6330336, 0.08606291, 0.9187001, 0.38546523, 0.6569017, -0.34321278, 0.67133087, -2.4292421, 2.3029978, 2.7773588)

[node name="PlayerPreview" parent="." instance=ExtResource("2_65nj0")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 158.0
offset_top = 211.0
offset_right = 556.0
offset_bottom = 599.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 0
offset_left = 14.875
offset_top = 10.465
offset_right = 379.875
offset_bottom = 68.465

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Hair Color"
horizontal_alignment = 1

[node name="HairColorContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnBlonde" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/HairColorContainer"]
layout_mode = 2
text = "Blonde"

[node name="BtnBlack" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/HairColorContainer"]
layout_mode = 2
text = "Black
"

[node name="BtnBrown" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/HairColorContainer"]
layout_mode = 2
text = "Brown"

[node name="BtnOrange" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/HairColorContainer"]
layout_mode = 2
text = "Orange"

[node name="BtnWhite" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/HairColorContainer"]
layout_mode = 2
text = "White"

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Hair Type"
horizontal_alignment = 1

[node name="HairTypeContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnHairNext" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/HairTypeContainer"]
layout_mode = 2
text = "<"

[node name="BtnHairPrev" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/HairTypeContainer"]
layout_mode = 2
text = ">
"

[node name="Label3" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Eye Color"
horizontal_alignment = 1

[node name="EyeColorContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnEyeBlue" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/EyeColorContainer"]
layout_mode = 2
text = "Blue"

[node name="BtnEyeGreen" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/EyeColorContainer"]
layout_mode = 2
text = "Green
"

[node name="BtnEyeBrown" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/EyeColorContainer"]
layout_mode = 2
text = "Brown"

[node name="BtnEyeGrey" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/EyeColorContainer"]
layout_mode = 2
text = "Grey"

[node name="BtnEyeTurquoise" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/EyeColorContainer"]
layout_mode = 2
text = "Turquoise"

[node name="BtnEyeOrange" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/EyeColorContainer"]
layout_mode = 2
text = "Orange"

[node name="Label4" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Skin Color"
horizontal_alignment = 1

[node name="SkinColorContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnSkinDefault" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer"]
layout_mode = 2
text = "Default"

[node name="BtnSkinPale" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer"]
layout_mode = 2
text = "Pale"

[node name="BtnSkinYellow" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer"]
layout_mode = 2
text = "Yellow"

[node name="BtnSkinLightdark" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer"]
layout_mode = 2
text = "Light Dark"

[node name="BtnSkinTan" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer"]
layout_mode = 2
text = "Tan"

[node name="BtnSkinDark" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer"]
layout_mode = 2
text = "Dark"

[node name="Label6" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Gender"
horizontal_alignment = 1

[node name="SkinColorContainer2" type="HBoxContainer" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnGenderFemale" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer2"]
layout_mode = 2
text = "Female"

[node name="BtnGenderMale" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer/SkinColorContainer2"]
layout_mode = 2
text = "Male"

[node name="Label5" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="BtnStart" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Start"
